@@ -1,0 +1,111 @@
+# LaTeXOptions strings=Your language
+0.LaTeXOptions.HelpText=
+1.LaTeXOptions.Title=LaTeX asetukset (Writer2LaTeX)
+2.LaTeXOptions.FixedLine1.HelpText=
+3.LaTeXOptions.FixedLine1.Label=
+4.LaTeXOptions.GeneralLabel.HelpText=
+5.LaTeXOptions.GeneralLabel.Label=Yleiset asetukset
+6.LaTeXOptions.ConfigLabel.HelpText=
+7.LaTeXOptions.ConfigLabel.Label=LaTeX formaatti
+8.LaTeXOptions.Config.HelpText=
+137.Config.StringItemList=Ultra-clean artikkeli
+138.Config.StringItemList=Clean artikkeli
+139.Config.StringItemList=Oletus
+140.Config.StringItemList=Tulostukseen optimoitu
+141.Config.StringItemList=N\u00e4yt\u00f6lle optimoitu (pdf)
+142.Config.StringItemList=Custom
+15.LaTeXOptions.BackendLabel.HelpText=
+16.LaTeXOptions.BackendLabel.Label=Backend
+17.LaTeXOptions.Backend.HelpText=
+116.Backend.StringItemList=Generic
+117.Backend.StringItemList=Pdf (pdfTeX)
+118.Backend.StringItemList=Postscript (dvips)
+119.Backend.StringItemList=Unspecified
+22.LaTeXOptions.InputencodingLabel.HelpText=
+23.LaTeXOptions.InputencodingLabel.Label=Merkist\u00f6n koodaus
+24.LaTeXOptions.Inputencoding.HelpText=
+120.Inputencoding.StringItemList=ASCII (US)
+121.Inputencoding.StringItemList=L\u00e4nsi-Eurooppalainen (ISO 8859-1)
+122.Inputencoding.StringItemList=It\u00e4-Eurooppalainen (ISO 8859-2)
+123.Inputencoding.StringItemList=Latina/Kreikka (ISO 8859-7)
+124.Inputencoding.StringItemList=Mircosoft It\u00e4-Eurooppa (CP1251)
+125.Inputencoding.StringItemList=Miicrosoft Kyriilinen (CP1251)
+126.Inputencoding.StringItemList=Ven\u00e4j\u00e4 (koi8-r)
+127.Inputencoding.StringItemList=Unicode (UTF8)
+33.LaTeXOptions.Multilingual.HelpText=
+34.LaTeXOptions.Multilingual.Label=Salli monikielisyyden tuki
+35.LaTeXOptions.GreekMath.HelpText=
+36.LaTeXOptions.GreekMath.Label=K\u00e4yt\u00e4 Kreikkalaisia kirjaimia symbooleina
+37.LaTeXOptions.AdditionalSymbols.HelpText=
+38.LaTeXOptions.AdditionalSymbols.Label=Tue muita symbooleja
+39.LaTeXOptions.BibliographyLabel.HelpText=
+40.LaTeXOptions.BibliographyLabel.Label=Bibiliografia
+41.LaTeXOptions.UseBibtex.HelpText=
+42.LaTeXOptions.UseBibtex.Label=K\u00e4yt\u00e4 BibTeX:i\u00e4 bibliografiaan
+43.LaTeXOptions.BibtexStyleLabel.HelpText=
+44.LaTeXOptions.BibtexStyleLabel.Label=BibTeX tyyli
+45.LaTeXOptions.BibtexStyle.HelpText=
+46.BibtexStyle.StringItemList=plain
+47.BibtexStyle.StringItemList=unsrt
+48.BibtexStyle.StringItemList=alpha
+49.BibtexStyle.StringItemList=abbrv
+50.LaTeXOptions.BibtexStyle.Text=
+51.LaTeXOptions.FilesLabel.HelpText=
+52.LaTeXOptions.FilesLabel.Label=Tiedostot
+53.LaTeXOptions.WrapLines.HelpText=
+54.LaTeXOptions.WrapLines.Label=Automaattinen rivitys
+55.LaTeXOptions.WrapLinesAfterLabel.HelpText=
+56.LaTeXOptions.WrapLinesAfterLabel.Label=Merkin j\u00e4lkeen
+57.LaTeXOptions.WrapLinesAfter.HelpText=
+58.LaTeXOptions.SplitLinkedSections.HelpText=
+59.LaTeXOptions.SplitLinkedSections.Label=Jaa dokumentti linkityksen kohdalla (linked sections)
+60.LaTeXOptions.SplitToplevelSections.HelpText=
+61.LaTeXOptions.SplitToplevelSections.Label=Jaa dokumentti lukujen kohdalta (top level sections)
+62.LaTeXOptions.SaveImagesInSubdir.HelpText=
+63.LaTeXOptions.SaveImagesInSubdir.Label=Tallenna kuvat alakansioon
+64.LaTeXOptions.SpecialContentLabel.HelpText=
+65.LaTeXOptions.SpecialContentLabel.Label=Muut asetukset
+66.LaTeXOptions.NotesLabel.HelpText=
+67.LaTeXOptions.NotesLabel.Label=Vie huomautukset
+68.LaTeXOptions.Notes.HelpText=
+128.Notes.StringItemList=\u00c4l\u00e4 vie
+129.Notes.StringItemList=Kommenttina
+130.Notes.StringItemList=Marginaaliin
+131.Notes.StringItemList=PDF sivuhuomautuksena
+73.LaTeXOptions.Metadata.HelpText=
+74.LaTeXOptions.Metadata.Label=Vie dokumentin ominaisuudet (metadata)
+75.LaTeXOptions.FiguresAndTablesLabel.HelpText=
+76.LaTeXOptions.FiguresAndTablesLabel.Label=Kuviot ja taulukot
+77.LaTeXOptions.OriginalImageSize.HelpText=
+78.LaTeXOptions.OriginalImageSize.Label=K\u00e4yt\u00e4 alkuper\u00e4ist\u00e4 kokoa
+79.LaTeXOptions.OptimizeSimpleTables.HelpText=
+80.LaTeXOptions.OptimizeSimpleTables.Label=Optimoi yksinkertaiset taulukot
+81.LaTeXOptions.SimpleTableLimitLabel.HelpText=
+82.LaTeXOptions.SimpleTableLimitLabel.Label=Maksimi leveys merkkein\u00e4
+83.LaTeXOptions.SimpleTableLimit.HelpText=
+84.LaTeXOptions.FloatTables.HelpText=
+85.LaTeXOptions.FloatTables.Label=Kelluva taulukko
+86.LaTeXOptions.FloatFigures.HelpText=
+87.LaTeXOptions.FloatFigures.Label=Kelluva kuvio
+88.LaTeXOptions.FloatOptionsLabel.HelpText=
+89.LaTeXOptions.FloatOptionsLabel.Label=Objektin sijoitus
+90.LaTeXOptions.FloatOptions.HelpText=
+132.FloatOptions.StringItemList=Sivun yl\u00e4- tai alareunassa ([tb])
+133.FloatOptions.StringItemList=Sivun yl\u00e4reunassa ([t])
+134.FloatOptions.StringItemList=Sivun alareunassa ([b])
+135.FloatOptions.StringItemList=T\u00e4ss\u00e4 tai sivun yl\u00e4reunassa ([ht])
+136.FloatOptions.StringItemList=T\u00e4ss\u00e4 tai sivun alareunassa([hb])
+96.LaTeXOptions.AutoCorrectLabel.HelpText=
+97.LaTeXOptions.AutoCorrectLabel.Label=Automaattinen korjaus
+98.LaTeXOptions.IgnoreHardPageBreaks.HelpText=
+99.LaTeXOptions.IgnoreHardPageBreaks.Label=Ohita pakotetut sivunvaihdot
+100.LaTeXOptions.IgnoreHardLineBreaks.HelpText=
+101.LaTeXOptions.IgnoreHardLineBreaks.Label=Ohita pakotettut rivinvaihdot
+102.LaTeXOptions.IgnoreEmptyParagraphs.HelpText=
+103.LaTeXOptions.IgnoreEmptyParagraphs.Label=Ohita tyhj\u00e4t kappaleet
+104.LaTeXOptions.IgnoreDoubleSpaces.HelpText=
+105.LaTeXOptions.IgnoreDoubleSpaces.Label=Ohita kaksoisv\u00e4lily\u00f6nnit
+106.LaTeXOptions.ExportButton.HelpText=
+107.LaTeXOptions.ExportButton.Label=Vie
+108.LaTeXOptions.CancelButton.HelpText=
+109.LaTeXOptions.CancelButton.Label=Peruuta
