@@ -22,6 +22,7 @@
     <name lang="de">Writer2Latex Exportfilter</name>
     <name lang="nl">Writer2LaTeX exportfilters</name>
     <name lang="es">Writer2LaTeX filtros para exportar</name>
+    <name lang="fi">Writer2Latex vienti suodattimet</name>
     <name lang="fr">Filtres d'exportation Writer2LaTeX</name>
     <name lang="it">Filtri di esportazione Writer2LaTeX</name>
     <name lang="pt_BR">Filtros de exportação do Writer2LaTeX</name>
@@ -44,6 +45,7 @@
     <src xlink:href="desc_de.txt" lang="de" />
     <src xlink:href="desc_nl.txt" lang="nl" />
     <src xlink:href="desc_es.txt" lang="es" />
+    <src xlink:href="desc_fi.txt" lang="fi" />
     <src xlink:href="desc_fr.txt" lang="fr" />
     <src xlink:href="desc_it.txt" lang="it" />
     <src xlink:href="desc_pt_BR.txt" lang="pt_BR" />
